--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,8 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.App-date {
+  text-align: center; 
+  padding-bottom: 15px;
+}
