--- a/src/containers/Schedule/Schedule.css
+++ b/src/containers/Schedule/Schedule.css
@@ -5,10 +5,16 @@
 .occasion {
     font-size: 18px;
 }
+.colours {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 15px 0;
+}
 .colour-square {
     margin-left: 3px;
     margin-right: 3px;
-    padding: 5px;
+    padding: 3px;
+    margin: 2px;
     font-size: 24px;
 }
 .red {
