added details on footer

--- a/src/containers/Footer/index.css
+++ b/src/containers/Footer/index.css
@@ -1,3 +1,10 @@
 .footer{
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer span:first-child{
+    border-top: 1px solid;
+    border-color: var(--light);
 }
