--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,40 +2,15 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
+div {
+  position: relative;
 }
 
 #nav-main {
   padding-left: 0;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
 .App-date {
-  text-align: left; 
+  text-align: left;
   padding-bottom: 12px;
-
 }
-
-
-
