added day of week and no colour style

--- a/src/containers/Schedule/Schedule.css
+++ b/src/containers/Schedule/Schedule.css
@@ -35,6 +35,10 @@
     transform: rotate(-2deg);
 }
 
+.no-colour{
+    border: 1px solid;
+}
+
 .occasion .title {
     display: flex;
     flex-direction: column;
